--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^15.6.1",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.2",
-    "semantic-ui-react": "^0.74.2"
+    "semantic-ui-react": "^0.74.2",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
