--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.4",
     "moment": "2.18.1",
     "mongodb": "^2.2.31",
     "nunjucks": "^3.0.1",
