--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cluster": "^0.7.7",
     "connect-mongo": "^1.3.2",
     "consolidate": "^0.14.5",
     "cookie-parser": "^1.4.3",
@@ -49,7 +50,7 @@
     "server:watch": "nodemon app.js",
     "build:watch": "./node_modules/.bin/webpack -d --watch",
     "build": "./node_modules/.bin/webpack -p",
-    "server": "node app.js",
+    "server": "node app_cluster.js",
     "watch": "npm run build:watch & npm run server:watch",
     "dev": "concurrently --kill-others \"npm run watch\" \"npm run watch-css\"",
     "start": "npm run server"
