--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-mongo": "^1.3.2",
     "consolidate": "^0.14.5",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
     "lodash": "^4.17.4",
