--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.2.31",
     "nunjucks": "^3.0.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
