--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^15.6.1",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.2",
+    "react-transition-group": "^2.2.1",
     "semantic-ui-react": "^0.74.2",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.1"
@@ -32,6 +33,8 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.0",
